Portugal-brazil fixes
conserto da formação do reino de algarves

- criação do reino de algarves

- buff nas tecnologias navais de portugal

--- a/Kobras Smokantes 2.0/localisation/KS2_CountriesNames.csv
+++ b/Kobras Smokantes 2.0/localisation/KS2_CountriesNames.csv
@@ -2,3 +2,5 @@ IBR;Empire Of Iberia;x;;;
 IBR_ADJ;Iberians;x;;;
 BEN;Benelux Empire;x;;;
 BEN_ADJ;Beneluxian;x;;;
+UPB;United United Kingdom of Portugal Brazil and Algarves;x;;;
+UPB_ADJ;Algarvian;x;;;
