--- a/Kobras Smokantes 3.0/localisation/KS2_Descisions.csv
+++ b/Kobras Smokantes 3.0/localisation/KS2_Descisions.csv
@@ -127,5 +127,23 @@ integrate_the_Northwest_Russians_title;Integrate the Russians hwest slavics;;;;;
 integrate_the_Northwest_Russians_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
 The_Russian_Sea_Empire_title;The Russian Sea Empire;;;;;;;;;;;;;X,,,,,,,,,,,,,,
 The_Russian_Sea_Empire_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
-integrate_the_Russians_west_slavics_title;Integrate the Russians northwest slavics;;;;;;;;;;;;;X,,,,,,,,,,,,,,
-integrate_the_Russians_west_slavics_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Retake_Our_scottish_lands_title;Retake Our Scottish lands;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Retake_Our_scottish_lands_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Recover_the_Irish_lands_title;Recover the Irish lands;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Recover_the_Irish_lands_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Empire_Of_Iberia_title;Empire Of Iberia;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Empire_Of_Iberia_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Towards_Kalmar_union_title;Towards Kalmar union;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Towards_Kalmar_union_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Expand_towards_east_title;Expand towards east;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Expand_towards_east_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Ottoman_middle_east_hegemony_title;Ottoman middle east hegemony;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Ottoman_middle_east_hegemony_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+integrate_The_easterns_title;Integrate the easterns;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+integrate_The_easterns_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+focus_on_balkans_title;Focus on balkans;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+focus_on_balkans_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Face_a_old_rival_title;Facing an old rival;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Face_a_old_rival_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Fall_Of_Wien_title;Fall Of Wien;;;;;;;;;;;;;X,,,,,,,,,,,,,,
+Fall_Of_Wien_desc;;;;;;;;;;;;;;X,,,,,,,,,,,,,,
